# quotesapp

./: .gitignore  Dockerfile  Dockerfile.dev  distill.sh  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  quotes.sqlite3  quotesdb.sqlite3
.github/workflows/: run.yml
locale/de/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
locale/hi/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/zh_CN/LC_MESSAGES/: django.po
mainapp/: admin.py  context_processors.py  distill.py  forms.py  logics.py  models.py  sitemaps.py  urls.py  views.py
mainapp/management/commands/: dump.py  (+2 more)
mainapp/migrations/: 0001_initial.py  0002_author_author_slug.py  0002_remove_quote_id_quote_quote_id.py  0003_alter_quote_quote_id.py  0004_alter_quote_quote_id.py  0005_topic_topic_slug.py  0006_remove_topic_topic_slug.py  0007_topic_topic_slug.py  0008_alter_topic_topic_alter_topic_topic_slug.py  0009_alter_author_author_alter_author_author_slug.py  0010_alter_quote_author_alter_quote_topics.py  0011_alter_author_author.py  0012_simplecontact.py  0013_simplecontact_elaboration.py  0014_alter_simplecontact_elaboration.py  0015_quote_image_1_quote_image_2_quote_image_3_and_more.py  0016_remove_quote_image_1_remove_quote_image_2_and_more.py  0017_quote_images.py
mainapp/templatetags/: localeurl.py
quotesapp/: asgi.py  base_settings.py  seoclass.py  settings.py  urls.py  urls_dev.py  views.py  wsgi.py
quotesapp/settings/: dev.py  prod.py
server/: nginx.conf
templates/: 404.html  ack.html  base.html  homepage.html  qotd.html  quote.html  search.html
templates/authors/: author_individual.html  index.html
templates/layout/: footer.html  header.html
templates/pages/: contact.html
templates/topics/: index.html  topic_individual.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
