[tool.poetry]
name = "quotesapp"
version = "0.1.0"
description = ""
authors = ["Aman Rawat <kirmolaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-tailwind = "^3.8.0"
django-htmx = "^1.17.3"
dj-database-url = "^2.1.0"
django-autoslug = "^1.9.9"
shortuuid = "^1.0.13"
pillow = "^10.3.0"
django-minify-html = "^1.7.1"
django-distill = "^3.1.3"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.3.0"
django-browser-reload = "^1.12.1"
faker = "^25.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
